<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"

    tools:context="net.greenrivertech.yegorshem.androidquizapp.QuestionActivity">

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:text="@string/question_textview"
        android:textSize="25sp"
        android:onClick="nextQuestion"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight=".20"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bttnFalse"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="50dp"
            android:onClick="onButtonFalse"
            android:text="@string/bttn_false"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bttnTrue"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="50dp"
            android:onClick="onButtonTrue"
            android:text="@string/bttn_true"
            android:textSize="20sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="100dp"
        android:gravity="bottom"
        android:minHeight="120dp">

        <ImageButton
            android:id="@+id/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_margin="20dp"
            android:background="@null"
            android:onClick="prevQuestion"
            android:src="@drawable/previous" />

        <ImageButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"
            android:background="@null"
            android:onClick="nextQuestion"
            android:src="@drawable/next" />
    </RelativeLayout>


</LinearLayout>
